[gd_scene load_steps=2 format=3 uid="uid://c3nddqulvjhfc"]

[ext_resource type="Script" uid="uid://bvvund6cb00on" path="res://scenes/main_menu.gd" id="1_yqorp"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_yqorp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(1440, 810)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainPanel/MarginContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
alignment = 1

[node name="ButtonStart" type="Button" parent="Control/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="ButtonQuit" type="Button" parent="Control/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[node name="ButtonCredits" type="Button" parent="Control/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="CreditsPanel" type="PanelContainer" parent="Control"]
visible = false
custom_minimum_size = Vector2(1440, 810)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control/CreditsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CreditsPanel/MarginContainer"]
custom_minimum_size = Vector2(1440, 810)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Control/CreditsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "The game dev was the groups DP3-3 member Marks Gerhards BrÅ«veris "

[node name="ButtonBack" type="Button" parent="Control/CreditsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Control/MainPanel/MarginContainer/VBoxContainer/ButtonStart" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Control/CreditsPanel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_back_button_pressed"]
